# clion-cmake-sdl2-template

./: .gitignore  CMakeLists.txt  README.md
SDL2/i686-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
SDL2/i686-w64-mingw32/lib/pkgconfig/: sdl2.pc
SDL2/x86_64-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
SDL2/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
scripts/: main.cpp
